# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-02-26  Christian Heller  <christian.heller@tuxtax.de>
        * Clean up some minor issues in preparations of release CYBOP 0.10.0

2011-02-25  Christian Heller  <christian.heller@tuxtax.de>
        * Experiment with a few new container functions

2011-02-24  Christian Heller  <christian.heller@tuxtax.de>
        * Add file "part_replacer.c" and some constants

2011-02-23  Christian Heller  <christian.heller@tuxtax.de>
        * Update website
        * Add old scientific article "An Investigation ..." from February 2006

2011-02-22  Christian Heller  <christian.heller@tuxtax.de>
        * Update project plan on website

2011-02-19  Christian Heller  <christian.heller@tuxtax.de>
        * Fix error that size was set one too large in function "replace_adjust"
        * Fix error that count was increased before replacing elements in function "replace_adjust",
            which may cause memory errors when "sensing" threads access the destination
            because the count is higher than the actual number of valid elements
        * Replace old "append..." functions with new ones and delete directory "executor/accessor/appender/"

2011-02-06  Christian Heller  <christian.heller@tuxtax.de>
        * Solve conflict between old and new "replace" (formerly "set") functions

2011-02-03  Christian Heller  <christian.heller@tuxtax.de>
        * Move "assign" and "set" functionality from "executor/accessor/" into "executor/modifier/"
        * Rename "set" functions into "replace"

2011-02-01  Christian Heller  <christian.heller@tuxtax.de>