@@ -68,7 +68,7 @@ div#page p {
 
 div#page table {
     margin: 5px;
-    max-width: 600;
+    max-width: 600px;
     padding: 0.2em;
     font-size: 0.9em;
 }
