@@ -1,0 +1,65 @@
+<model>
+    <part name="compare_count" channel="inline" abstraction="operation/plain" model="compare">
+        <property name="comparison" channel="inline" abstraction="text/plain" model="greater_or_equal"/>
+        <property name="left" channel="inline" abstraction="path/knowledge" model=".counter.count"/>
+        <property name="right" channel="inline" abstraction="path/knowledge" model=".counter.maximum"/>
+        <property name="result" channel="inline" abstraction="path/knowledge" model=".counter.break"/>
+    </part>
+    <part name="TEST_print_break" channel="inline" abstraction="operation/plain" model="send">
+        <property name="channel" channel="inline" abstraction="text/plain" model="shell"/>
+        <property name="language" channel="inline" abstraction="text/plain" model="integer"/>
+        <property name="message" channel="inline" abstraction="path/knowledge" model=".counter.break"/>
+        <property name="new_line" channel="inline" abstraction="logicvalue/boolean" model="true"/>
+    </part>
+    <part name="check_break" channel="inline" abstraction="operation/plain" model="branch">
+        <property name="criterion" channel="inline" abstraction="path/knowledge" model=".counter.break"/>
+        <!-- The empty true model. CAUTION! Do NOT use abstraction "path/knowledge" here, as it somehow causes cyboi to crash. -->
+        <property name="true" channel="inline" abstraction="operation/plain" model="exit"/>
+<!--
+        <property name="true" channel="inline" abstraction="text/plain" model=""/>
+-->
+        <!-- The false model. This model calls itself if it has to be repeated in the loop again. -->
+<!--
+        <property name="false" channel="inline" abstraction="path/knowledge" model=".counter.model"/>
+-->
+    </part>
+    <part name="print_number" channel="inline" abstraction="operation/plain" model="send">
+        <property name="channel" channel="inline" abstraction="text/plain" model="shell"/>
+        <property name="language" channel="inline" abstraction="text/plain" model="integer"/>
+        <property name="message" channel="inline" abstraction="path/knowledge" model=".counter.count"/>
+        <property name="new_line" channel="inline" abstraction="logicvalue/boolean" model="true"/>
+    </part>
+    <part name="increment_loop_count" channel="inline" abstraction="operation/plain" model="add">
+        <property name="abstraction" channel="inline" abstraction="text/plain" model="integer"/>
+        <property name="summand_1" channel="inline" abstraction="path/knowledge" model=".counter.count"/>
+        <property name="summand_2" channel="inline" abstraction="number/integer" model="1"/>
+        <property name="sum" channel="inline" abstraction="path/knowledge" model=".counter.count"/>
+    </part>
+</model>
+
+<!--
+    Copyright (C) 1999-2011. Christian Heller.
+
+    This file is part of the Cybernetics Oriented Interpreter (CYBOI).
+    It represents an example knowledge model,
+    and is written in the Cybernetics Oriented Language (CYBOL).
+
+    CYBOI is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    CYBOI is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with CYBOI.  If not, see <http://www.gnu.org/licenses/>.
+
+    Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
+    Christian Heller <christian.heller@tuxtax.de>
+
+    @version $RCSfile: run.cybol,v $ $Revision: 1.18 $ $Date: 2009-01-03 01:24:53 $ $Author: christian $
+    @author Christian Heller <christian.heller@tuxtax.de>
+/-->
