@@ -1,0 +1,95 @@
+<model>
+    <part name="create_counter" channel="inline" abstraction="operation/plain" model="create">
+        <property name="name" channel="inline" abstraction="text/plain" model="counter"/>
+        <property name="abstraction" channel="inline" abstraction="text/plain" model="compound"/>
+        <property name="element" channel="inline" abstraction="text/plain" model="part"/>
+    </part>
+    <part name="create_break" channel="inline" abstraction="operation/plain" model="create">
+        <property name="name" channel="inline" abstraction="text/plain" model="break"/>
+        <property name="abstraction" channel="inline" abstraction="text/plain" model="integer"/>
+        <property name="element" channel="inline" abstraction="text/plain" model="part"/>
+        <property name="whole" channel="inline" abstraction="path/knowledge" model=".counter"/>
+    </part>
+    <part name="create_count" channel="inline" abstraction="operation/plain" model="create">
+        <property name="name" channel="inline" abstraction="text/plain" model="count"/>
+        <property name="abstraction" channel="inline" abstraction="text/plain" model="integer"/>
+        <property name="element" channel="inline" abstraction="text/plain" model="part"/>
+        <property name="whole" channel="inline" abstraction="path/knowledge" model=".counter"/>
+    </part>
+    <part name="create_maximum" channel="inline" abstraction="operation/plain" model="create">
+        <property name="name" channel="inline" abstraction="text/plain" model="maximum"/>
+        <property name="abstraction" channel="inline" abstraction="text/plain" model="integer"/>
+        <property name="element" channel="inline" abstraction="text/plain" model="part"/>
+        <property name="whole" channel="inline" abstraction="path/knowledge" model=".counter"/>
+    </part>
+    <part name="create_model" channel="inline" abstraction="operation/plain" model="create">
+        <property name="name" channel="inline" abstraction="text/plain" model="model"/>
+        <property name="abstraction" channel="inline" abstraction="text/plain" model="compound"/>
+        <property name="element" channel="inline" abstraction="text/plain" model="part"/>
+        <property name="whole" channel="inline" abstraction="path/knowledge" model=".counter"/>
+    </part>
+    <part name="initialise_break" channel="inline" abstraction="operation/plain" model="copy">
+        <property name="abstraction" channel="inline" abstraction="text/plain" model="integer"/>
+        <property name="source" channel="inline" abstraction="number/integer" model="0"/>
+        <property name="destination" channel="inline" abstraction="path/knowledge" model=".counter.break"/>
+    </part>
+    <part name="initialise_count" channel="inline" abstraction="operation/plain" model="copy">
+        <property name="abstraction" channel="inline" abstraction="text/plain" model="integer"/>
+        <property name="source" channel="inline" abstraction="number/integer" model="0"/>
+        <property name="destination" channel="inline" abstraction="path/knowledge" model=".counter.count"/>
+    </part>
+    <part name="initialise_maximum" channel="inline" abstraction="operation/plain" model="copy">
+        <property name="abstraction" channel="inline" abstraction="text/plain" model="integer"/>
+        <property name="source" channel="inline" abstraction="number/integer" model="10"/>
+        <property name="destination" channel="inline" abstraction="path/knowledge" model=".counter.maximum"/>
+    </part>
+    <part name="initialise_model" channel="inline" abstraction="operation/plain" model="receive">
+        <property name="channel" channel="inline" abstraction="text/plain" model="file"/>
+        <property name="language" channel="inline" abstraction="text/plain" model="text/cybol"/>
+        <property name="message" channel="inline" abstraction="text/plain" model="counter/model.cybol"/>
+        <property name="model" channel="inline" abstraction="path/knowledge" model=".counter.model"/>
+    </part>
+    <!-- TEST: Write knowledge tree into file. -->
+    <part name="test_knowledge_tree" channel="inline" abstraction="operation/plain" model="send">
+        <property name="channel" channel="inline" abstraction="text/plain" model="file"/>
+        <property name="language" channel="inline" abstraction="text/plain" model="text/model-diagram"/>
+        <property name="message" channel="inline" abstraction="path/knowledge" model=".counter"/>
+        <property name="receiver" channel="inline" abstraction="text/plain" model="TEST_COUNTER.txt"/>
+    </part>
+    <part name="print_numbers" channel="inline" abstraction="operation/plain" model="loop">
+        <property name="break" channel="inline" abstraction="path/knowledge" model=".counter.break"/>
+        <property name="model" channel="inline" abstraction="path/knowledge" model=".counter.model"/>
+    </part>
+    <part name="exit_application" channel="inline" abstraction="operation/plain" model="exit"/>
+</model>
+
+<!--
+    This example uses a loop to print the numbers 1 to 10 to screen.
+/-->
+
+<!--
+    Copyright (C) 1999-2011. Christian Heller.
+
+    This file is part of the Cybernetics Oriented Interpreter (CYBOI).
+    It represents an example knowledge model,
+    and is written in the Cybernetics Oriented Language (CYBOL).
+
+    CYBOI is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    CYBOI is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with CYBOI.  If not, see <http://www.gnu.org/licenses/>.
+
+    Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
+    Christian Heller <christian.heller@tuxtax.de>
+
+    @version $RCSfile: run.cybol,v $ $Revision: 1.18 $ $Date: 2009-01-03 01:24:53 $ $Author: christian $
+    @author Christian Heller <christian.heller@tuxtax.de>
+/-->
